--- a/styles/connexionCompte.css
+++ b/styles/connexionCompte.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #3a1768;
     color: #fff;
     padding: 15px 0;
     text-align: center;
@@ -56,7 +56,7 @@ input[type="password"] {
 button {
     width: 100%;
     padding: 12px;
-    background-color: #333;
+    background-color: #3a1768;
     color: white;
     border: none;
     border-radius: 5px;
@@ -86,7 +86,7 @@ button:hover {
 /* Footer */
 footer {
     text-align: center;
-    background-color: #333;
+    background-color: #3a1768;
     color: #fff;
     padding: 10px;
     position: fixed;
