--- a/styles/connexionCompte.css
+++ b/styles/connexionCompte.css
@@ -46,7 +46,7 @@ h4 {
 
 input[type="email"],
 input[type="password"] {
-    width: 100%;
+    width: 96%;
     padding: 10px;
     margin: 5px 0;
     border-radius: 5px;
@@ -68,7 +68,7 @@ button:hover {
     background-color: #555;
 }
 
-/* Lien vers la création de compte */
+/* Lien vers la crÃ©ation de compte */
 .register-link {
     text-align: center;
     margin-top: 10px;
